Hover for museum inspo and suit jacket

--- a/styles.css
+++ b/styles.css
@@ -190,7 +190,6 @@ h2 {
 }
 
 a[class~="logo"]:hover {
-  /* color: #525252FF; */
   background-color: var(--light-green);
   color: inherit;
 }
@@ -325,7 +324,6 @@ section {
 */
 
 
-
 .all-projects p {
   padding: 5px 40px;
 }
@@ -347,7 +345,7 @@ section {
   width: 100%; 
 }
 
-
+/*
 .grid-total {
   display: flex;
   flex-direction: row;
@@ -366,20 +364,15 @@ section {
   object-fit: cover;
   min-width: 300px;
   position: relative;
-  /*
+
   border: 3px solid red; 
   width: max(30vw, 300px);
-  */
+
   
-}
+}*/
 
 
-.grid-img {
-  display: block;
-  width: 100%;
-  height: auto;
-  /*border: 3px solid blue; */
-}
+
 
 .overlay {
   position: absolute;
@@ -427,9 +420,9 @@ section {
   display: flex;
   flex-wrap: wrap;
   padding: 5px; 
-  gap: 5px; 
+  gap: 15px; 
   margin-bottom: 15px; 
-  justify-content: space-around;
+  justify-content: center;
 }
 
 
@@ -475,6 +468,61 @@ section {
 
 .hori {
   aspect-ratio: 4 / 3; 
+}
+
+
+.grid-img {
+  display: block;
+  width: 100%; 
+  height: auto;
+  object-fit: contain;
+  aspect-ratio: 3 / 4;
+  background-color: white;
+  
+}
+
+.container2 {
+  position: relative;
+  height: 65vh; 
+  width: auto; 
+  /*width: 70%;
+  max-width: 300px;*/
+
+}
+
+ /* Styles for smaller screens */
+ @media screen and (max-width: 768px) {
+  .container2 {
+    min-height: 350px; 
+  }
+}
+
+.image2 {
+  display: block;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 3 / 4;
+  max-width: 350px; 
+}
+
+
+.overlay2 {
+  position: absolute; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1; 
+  width: 100%;
+  /*transition: .5s ease;*/
+  opacity:0;
+  color: white;
+  font-size: 1.2em;
+  padding: 5px;
+  text-align: center;
+}
+
+.container2:hover .overlay2 {
+  opacity: 1;
 }
 
 
