--- a/harrystyles.css
+++ b/harrystyles.css
@@ -18,14 +18,26 @@
   
   
   /* Styles for smaller screens */
-  @media screen and (max-width: 768px) {
-    .andy-container {
-      flex-direction: column;
-      align-items: center;
-      padding: 30px;
-    }
+@media screen and (max-width: 768px) {
+  .andy-container {
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
   }
-  
+  .small-pic {
+    min-width: 300px;
+  }
+  .about-show {
+    flex-direction: column-reverse;
+  }
+  .empty-block {
+    display: none;
+  }
+  .container2 {
+    min-height: 350px; 
+  }
+
+}
   
   /*
   /* Styles for larger screens 
@@ -86,65 +98,212 @@
   
 /* --------------------------------------------------------------------------------------- */
 
-/* Resume Stuff */
 
-.resume-all {
+.all-projects p {
+  padding: 5px 40px;
+}
+
+.all-projects h3 {
+  background-color: var(--light-green);
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  left: 0;
+  border-bottom: 2px solid black;
+  padding: 2px 25px;
+  position: sticky;
+  top: calc(80px + 1.4rem);
+  z-index: 990;
+  margin-top: 0;
   width: 100%; 
 }
 
+.all-projects > div {
+  width: 100%; 
+}
 
-.resume {
+/*
+.grid-total {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  width: 80%; 
-  padding-top: 15px; 
-  height: auto; 
-  margin: 0 auto; 
+  gap: 16px;
+  max-width: 1400px;
+  margin: 0 auto;
+  padding: 20px 10px;
+}
+
+.grid-packet {
+  width: 31vw;
+  height: auto;
+  object-fit: cover;
+  min-width: 300px;
+  position: relative;
+
+  border: 3px solid red; 
+  width: max(30vw, 300px);
+
   
+}*/
+
+
+
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  height: 1.5em;
+  width: 100%;
+  opacity: 0;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  /* transition: .5s ease; */
+  background-color: black;
 }
 
-.download-buttons {
-  display: flex; 
-  text-align: center;
+.grid-packet:hover .overlay {
+  opacity: 0.8;
+}
+
+.grid-text {
+  color: white;
+  font-size: 20px;
+}
+
+.grid-total::after {
+  content: "";
+  width: 45vw;
+}
+
+.j-peterman {
+  border-radius: 10px;
+  width: 80%;
+  height: auto;
+  min-width: 300px; 
+  position: static;
+  margin: 1em auto;
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+}
+
+.side-by-side {
   width: 100%; 
-  gap: 20px; 
-  margin-top: 10px;
-  border: 2px solid red; 
+  display: flex;
+  flex-wrap: wrap;
+  padding: 5px; 
+  gap: 15px; 
+  margin-bottom: 15px; 
+  justify-content: center;
 }
 
 
-.download-buttons a {
-  color: black; 
-  text-decoration: none;
+.all-pics {
+  width: 100%; 
+  display: flex; 
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px; 
+  margin: 0 auto;
+  padding: 20px 10px;
+}
+
+.pic-box {
+  display: flex; 
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 40vw; 
+  min-width: 300px;
+  gap: 5px; 
+  /*border: 3px solid blue;*/
+}
+
+.big-pic {
+  /*border: 3px solid red; */
+  width: 40vw;
+  min-width: 300px;
+  max-width: 400px;
+  height: auto;
+  object-fit: contain;
+  justify-content: flex-start;
+}
+
+.small-pic {
+  aspect-ratio: 3 / 4;
+  width: 30%; 
+  min-width: 200px; 
+  max-width: 250px;
+}
+
+.hori {
+  aspect-ratio: 4 / 3; 
+}
+
+
+.grid-img {
+  display: block;
+  width: 100%; 
+  height: auto;
+  object-fit: contain;
+  aspect-ratio: 3 / 4;
+  background-color: white;
+  border: 4px solid purple; 
+}
+
+.container2 {
+  position: relative;
+  height: 65vh; 
+  width: auto; 
+  /*width: 70%;
+  max-width: 300px;*/
+  border: 3px solid red; 
+}
+
+ /* Styles for smaller screens */
+ @media screen and (max-width: 768px) {
+  .container2 {
+    min-height: 350px; 
+  }
+}
+
+.image2 {
+  display: block;
+  width: 100%;
+  height: auto;
+  aspect-ratio: 3 / 4;
+  max-width: 350px; 
+}
+
+
+.overlay2 {
+  position: absolute; 
+  bottom: 0; 
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5); /* Black see-through */
+  color: #f1f1f1; 
+  width: 100%;
+  /*transition: .5s ease;*/
+  opacity:0;
+  color: white;
+  font-size: 1.2em;
+  padding: 5px;
   text-align: center;
-  background-color: var(--dark-green);
-  font-size: min(3vw, 1em);
-  padding: 1.2em; 
-  margin: 0 auto; 
-  border: 2px solid green; 
 }
 
-
-.download-buttons a:hover {
-  color: black; 
-  text-decoration: none;
-  text-align: center;
-  background-color: var(--mid-green);
+.container2:hover .overlay2 {
+  opacity: 1;
 }
 
 
 
+
+/* --------------------------------------------------------------------------------------- */
   
   /* SCREEN READER STUFF */
   
