--- a/styles.css
+++ b/styles.css
@@ -345,61 +345,6 @@ section {
   width: 100%; 
 }
 
-/*
-.grid-total {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
-  max-width: 1400px;
-  margin: 0 auto;
-  padding: 20px 10px;
-}
-
-.grid-packet {
-  width: 31vw;
-  height: auto;
-  object-fit: cover;
-  min-width: 300px;
-  position: relative;
-
-  border: 3px solid red; 
-  width: max(30vw, 300px);
-
-  
-}*/
-
-
-
-
-.overlay {
-  position: absolute;
-  bottom: 0;
-  height: 1.5em;
-  width: 100%;
-  opacity: 0;
-  text-align: center;
-  justify-content: center;
-  align-items: center;
-  /* transition: .5s ease; */
-  background-color: black;
-}
-
-.grid-packet:hover .overlay {
-  opacity: 0.8;
-}
-
-.grid-text {
-  color: white;
-  font-size: 20px;
-}
-
-.grid-total::after {
-  content: "";
-  width: 45vw;
-}
 
 .j-peterman {
   border-radius: 10px;
@@ -470,25 +415,12 @@ section {
   aspect-ratio: 4 / 3; 
 }
 
-
-.grid-img {
-  display: block;
-  width: 100%; 
-  height: auto;
-  object-fit: contain;
-  aspect-ratio: 3 / 4;
-  background-color: white;
-  
-}
-
 .container2 {
   position: relative;
-  /*height: 65vh; */
-  height: auto; /* CHANGED */
+  height: auto;
   width: auto; 
   /*width: 70%;
   max-width: 300px;*/
-
 }
 
  /* Styles for smaller screens */
@@ -501,13 +433,13 @@ section {
 .image2 {
   display: block;
   width: 100%;
-  height: 50hv; /* CHANGED */
+  height: 50hv;
   aspect-ratio: 3 / 4;
   max-width: 350px; 
 }
 
 
-.overlay2 {
+.overlay {
   position: absolute; 
   bottom: 0; 
   background: rgb(0, 0, 0);
@@ -522,13 +454,9 @@ section {
   text-align: center;
 }
 
-.container2:hover .overlay2 {
+.container2:hover .overlay {
   opacity: 1;
 }
-
-
-
-
 
 /* RESUME STUFF */
 
