--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
   .andy-container {
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     padding: 30px;
   }
   .small-pic {
@@ -225,8 +226,7 @@ section {
   align-items: center;
   gap: 20px;
   width: 100%;
-  padding: 30px;
-  padding-right: 10%;
+  padding: 20px 10px;
 }
 
 #pfp {
