--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,8 @@ section {
 
 .andy-container {
   display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 20px;
@@ -229,7 +231,7 @@ section {
   padding: 20px 10px;
 }
 
-#pfp {
+.pfp {
   width: 40%;
   min-width: 300px;
   max-width: 400px;
