--- a/styles.css
+++ b/styles.css
@@ -269,9 +269,8 @@ section {
 .headliner p {
   align-items: end;
   padding: 0; 
-  font-size: 1rem; 
   margin: auto 0 2px; 
-  font-size: min(2vw, 1em);
+  font-size: min(3vw, 1em);
 }
 
 .production-gallery {
@@ -515,7 +514,7 @@ section {
   background-color: var(--dark-green);
   font-size: min(3vw, 1em);
   padding: 1.2em; 
-  margin: 0 auto; 
+  margin: 0 1.3em; 
 }
 
 
