--- a/styles.css
+++ b/styles.css
@@ -37,11 +37,15 @@ body {
   .container2 {
     min-height: 350px; 
   }
+
+  .nav-list {
+    width: 50%; 
+  }
 }
 
 
 
-/* Styles for larger screens 
+/* Styles for larger screens (tablets) */
 @media screen and (min-width: 768px) {
   body {
     font-size: 18px;
@@ -54,13 +58,13 @@ body {
   }
 }
 
-/* Styles for desktops 
+/* Styles for desktops */
 @media screen and (min-width: 1024px) {
   .container {
     width: 960px;
   }
 }
-*/
+
 
 
 /* Green color: #9ee2bfff */
@@ -106,18 +110,17 @@ footer {
   width: 100%;
   font-size: min(3vw, 1em);
   gap: 2em;
-  
 }
 
 .nav-list {
-  margin: 0;
+  margin: 0 5px;
   padding: 2px;
   position: fixed;
   right: 0;
-  width: 70vw;
+  justify-content: right;
   display: flex;
-  flex-wrap: wrap-reverse;
-  flex-direction: row-reverse;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .nav-list li {
@@ -200,13 +203,6 @@ a[class~="logo"]:hover {
   color: inherit;
 }
 
-
-
-
-
-
-
-
 section {
   display: flex;
   flex-wrap: wrap;
@@ -228,23 +224,24 @@ section {
   align-items: center;
   gap: 20px;
   width: 100%;
-  padding: 20px 10px;
+  padding: 20px 10px; 
 }
 
 .pfp {
-  width: 40%;
+  aspect-ratio: 3 / 4;
+  object-fit: cover;
+  width: 30%;
   min-width: 300px;
   max-width: 400px;
+  height: auto; 
   border-radius: 20px;
 }
 
 #bio {
-  margin: 15px;
+  margin: 10px;
   width: 55%;
   min-width: 300px;
 }
-
-
 
 /* PRODUCTION STUFF */
 
@@ -526,10 +523,6 @@ section {
 }
 
 
-
-
-
-
 /* CONTACT FORM STUFF */
 
 .contact-form {
@@ -565,7 +558,3 @@ section {
   white-space: nowrap;
   border: 0;
 }
-
-
-
-
