--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,10 @@ body {
   .nav-list {
     width: 50%; 
   }
+
+  .pfp {
+    width: 300px;
+  }
 }
 
 
@@ -230,14 +234,15 @@ section {
 .pfp {
   aspect-ratio: 3 / 4;
   object-fit: cover;
-  width: 30%;
-  min-width: 300px;
-  max-width: 400px;
+  width: 25%;
+  min-width: 250px;
+  max-width: 350px;
   height: auto; 
   border-radius: 20px;
 }
 
 #bio {
+  font-size: 1rem;
   margin: 10px;
   width: 55%;
   min-width: 300px;
