--- a/styles.css
+++ b/styles.css
@@ -132,6 +132,10 @@ footer {
   flex-direction: row;
 }
 
+.nav-list div {
+  margin-bottom: 4px;
+}
+
 .nav-list li {
   list-style: none;
   margin: 0 1em;
@@ -163,7 +167,7 @@ footer a {
 }
 
 .chosen {
-  border-bottom: 5px double black !important;
+  border-bottom: 2px solid black !important;
   /*font-weight: bold;*/
   cursor: pointer;
   color: black;
