--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,8 @@ body {
 nav,
 footer {
   width: 100%;
-  background-color: var(--dark-green);
+  /*background-color: var(--dark-green);*/
+  *background-color: transparent; 
   display: flex;
   flex-wrap: wrap;
   align-items: center;
